[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Materials/Empty.tres" type="Material" id=1]
[ext_resource path="res://Creator/CreationScene.gd" type="Script" id=2]
[ext_resource path="res://Creator/Environment.tres" type="Environment" id=3]
[ext_resource path="res://addons/zylann.atmosphere/planet_atmosphere.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/GUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resources/Masks/ShadowMask.png" type="Texture" id=6]
[ext_resource path="res://Creator/Exporter.gd" type="Script" id=7]

[sub_resource type="SphereMesh" id=1]
radial_segments = 512
rings = 256

[node name="Creation" type="Spatial"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="PlanetAthmosphere" parent="." instance=ExtResource( 4 )]
visible = false
atmosphere_height = 0.088
sun_path = NodePath("../Light/Sun")
shader_params/u_day_color0 = Color( 0.290196, 0.388235, 0.921569, 1 )
shader_params/u_night_color0 = Color( 0.709804, 0.639216, 0.964706, 1 )
shader_params/u_night_color1 = Color( 1, 1, 1, 1 )
shader_params/u_density = 1.153

[node name="CameraPivot" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.05402 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="ShadowMask" type="Sprite" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.960784 )
scale = Vector2( 1.05, 1.05 )
texture = ExtResource( 6 )

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[node name="Front" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.70561 )
visible = false
light_specular = 0.0
shadow_enabled = true
shadow_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
spot_range = 11.6
spot_angle = 32.853

[node name="Light" type="Spatial" parent="."]

[node name="Sun" type="OmniLight" parent="Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 35.5583 )
light_energy = 2.0
light_specular = 0.0
omni_range = 36.4684

[node name="Sun2" type="OmniLight" parent="Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.56755 )
light_energy = 2.0
light_specular = 0.0
omni_range = 9.84835

[node name="Sun3" type="OmniLight" parent="Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 11.9535 )
light_energy = 2.0
light_specular = 0.0
omni_range = 11.8158

[connection signal="atmosphere_color_changed" from="CanvasLayer/GUI" to="." method="_on_GUI_atmosphere_color_changed"]
[connection signal="atmosphere_visibility_changed" from="CanvasLayer/GUI" to="." method="_on_GUI_atmosphere_visibility_changed"]
[connection signal="cloud_visibility_changed" from="CanvasLayer/GUI" to="." method="_on_GUI_cloud_visibility_changed"]
[connection signal="export_sprite" from="CanvasLayer/GUI" to="CanvasLayer" method="_on_GUI_export_sprite"]
[connection signal="light_color_changed" from="CanvasLayer/GUI" to="." method="_on_GUI_light_color_changed"]
[connection signal="light_intensity_changed" from="CanvasLayer/GUI" to="." method="_on_GUI_light_intensity_changed"]
[connection signal="light_rotation_changed" from="CanvasLayer/GUI" to="." method="_on_GUI_light_rotation_changed"]
[connection signal="light_specular_changed" from="CanvasLayer/GUI" to="." method="_on_GUI_light_specular_changed"]
[connection signal="planet_type_changed" from="CanvasLayer/GUI" to="." method="_on_GUI_planet_type_changed"]
